--- a/docs/data_catalog/frontend/overview.mdx
+++ b/docs/data_catalog/frontend/overview.mdx
@@ -16,12 +16,13 @@ via [Fabric BFF](/data_catalog/data_catalog_fabric_bff.mdx) component.
 
 ## Features
 
-Mia-Platform Data Catalog frontend offers a user-friendly UI that allows users to navigate data assets and to perform a series of actions useful for data governance and metadata enrichment.  
+Mia-Platform Data Catalog frontend offers  
 
-In particular, when navigating the catalog, it is possible to identify three different asset types:  
-* **SoR** (System of Records)
-* **Table** (tables belonging to a specific SoR)
-* **Column** (columns retrieved for a specific table).  
+The frontend offers a user-friendly UI having:
+
+* an [Asset Discovery section](/data_catalog/frontend/data_catalog_assets.mdx)  that allows users to navigate data assets and to perform a series of actions useful for data governance and metadata enrichment;
+* a [Data Lineage section](/data_catalog/frontend/data_lineage.mdx) that allows users to create relations between real and virtual assets;
+* a [Connections section](/data_catalog/frontend/data_catalog_connections.mdx) that allows users to manage the connections used to retrieve assets.
 
 ## Configuration
 
