--- a/docs/data_catalog/overview.mdx
+++ b/docs/data_catalog/overview.mdx
@@ -51,6 +51,8 @@ Mia-Platform Data Catalog offers many powerful features for building your Data P
 
 * **Data Lineage**: Allows to track the origin and flow of data through systems to help understand how data are transformed and used through various business processes, useful to identify and resolve data quality issues.
 
+* **Connections Management**: Allows to add, edit and synchronize external data sources to retrieve their assets.
+
 ### Metadata Enrichment
 
 **Metadata enrichment** is a critical aspect of managing data assets within a Data Catalog.  
