--- a/docs/data_catalog/frontend/data_catalog_assets.mdx
+++ b/docs/data_catalog/frontend/data_catalog_assets.mdx
@@ -6,6 +6,11 @@ sidebar_label: Asset Discovery
 
 When accessing Data Catalog frontend, user lands to the home section of the Data Catalog, where there is a searchbar that represents the starting point to navigate among Data Catalog assets.
 
+In particular, when navigating the catalog, it is possible to identify three different asset types:  
+* **SoR** (System of Records), corresponding to a Connection configured in [its dedicated section](/data_catalog/frontend/data_catalog_connections.mdx);
+* **Table** (tables belonging to a specific SoR)
+* **Column** (columns retrieved for a specific table).  
+
 Given the large cardinality of assets that can be retrieved on this tool (SoR, Tables, Columns), it is possible to fine-tune search results through both the search-context setting and advanced search filtering options.  
 
 ## Search-context
