--- a/docs/data_catalog/secure_access.mdx
+++ b/docs/data_catalog/secure_access.mdx
@@ -900,6 +900,7 @@ or within the advanced tab of the corresponding page in the Composer.
               "read:users",
               "update:users",
               "update:bulk-action",
+              "update:lineage",
               "admin:connections"
             ]
           },
@@ -920,6 +921,7 @@ or within the advanced tab of the corresponding page in the Composer.
                 "read:users",
                 "update:users",
                 "update:bulk-action",
+                "update:lineage",
                 "admin:connections"
               ]
             }
