--- a/docs/data_catalog/frontend/data_catalog_connections.mdx
+++ b/docs/data_catalog/frontend/data_catalog_connections.mdx
@@ -271,7 +271,7 @@ it's possible to set the connection as `insecure` and set a custom certificate i
 ### Agent Settings
 
 Once the main details of a connection has been defined, you can also tune runtime parameters
-of the [Data Catalog Sync Job](/data_catalog/data_catalog_job_runner.mdx#data-catalog-sync) from the Job Runner. Here you can choose:
+of the [Agent Dataset Scan Job](/data_catalog/data_catalog_job_runner.mdx#agent-dataset-scan) from the Job Runner. Here you can choose:
 
 - the __Batch Size__, a number that defines the number of assets that can be paginated in a query;
 - the __Column Batch Size__, a number that defines the amount of columns that are expected to be processed by each batch iteration.
@@ -324,7 +324,7 @@ This action __will remove any assets that has been imported from that connection
 
 Once a connection has been defined and it's ready to be imported into the Data Catalog, you can start to synchronize its assets.
 
-In the main page of the Connections Panel, you can clik the `sync button` and schedule a [Data Catalog Sync Job](/data_catalog/data_catalog_job_runner.mdx#data-catalog-sync) from the Job Runner.
+In the main page of the Connections Panel, you can clik the `sync button` and schedule an [Agent Dataset Scan Job](/data_catalog/data_catalog_job_runner.mdx#agent-dataset-scan) from the Job Runner.
 Once the action has been executed, the table entry of that connection will be updated by the Job Runner with information about the job status. 
 
 <div style={{display: 'flex', justifyContent: 'center'}}>
@@ -335,7 +335,7 @@ Once the action has been executed, the table entry of that connection will be up
   </div>
 </div>
 
-Once the _[Data Catalog Sync Job](/data_catalog/data_catalog_job_runner.mdx#data-catalog-sync)_ is completed, a _[Fabric Sync Job](/data_catalog/data_catalog_job_runner.mdx#fabric-sync)_ will be executed automatically to store the assets retrieved from the data source into the Data Catalog.  
+Once the _[Agent Dataset Scan Job](/data_catalog/data_catalog_job_runner.mdx#agent-dataset-scan)_ is completed, a _[Data Catalog Sync Job](/data_catalog/data_catalog_job_runner.mdx#data-catalog-sync)_ will be executed automatically to store the assets retrieved from the data source into the Data Catalog.  
 
 <div style={{display: 'flex', justifyContent: 'center'}}>
   <div style={{display: 'flex', width: '100%'}}>
