remove data catalog agent setup page

--- a/docs/data_catalog/data_catalog_fabric_bff.mdx
+++ b/docs/data_catalog/data_catalog_fabric_bff.mdx
@@ -225,7 +225,7 @@ Under the endpoint specified above, the following routes are served by Fabric BF
 
 Here are the migration steps to perform between each version of the service.
 
-### From 0.1.1 to 0.2.0
+### From 0.1.x to 0.2.0
 
 The following steps needs to be followed:
 
