--- a/docs/data_catalog/overview.mdx
+++ b/docs/data_catalog/overview.mdx
@@ -150,8 +150,7 @@ Here are some useful links to learn more about Mia-Platform Data Catalog feature
 
 - visit the dedicated [documentation page](/data_catalog/frontend/overview.mdx) to discover all the features available from the Data Catalog Application frontend and how to configure it properly;
 - visit the dedicated [documentation page](/data_catalog/data_catalog_fabric_bff.mdx) for configuring the Data Catalog BFF, a key resource for the Data Catalog Application;
-- visit the dedicated [documentation page](/data_catalog/data_catalog_job_runner.mdx) for configuring the Data Catalog Job Runner to keep your Data Catalog up to date with your data sources;
-- visit the dedicated [documentation page](/data_catalog/data_catalog_agent_setup.mdx) for configuring the Data Catalog Agent to populate your Data Catalog;
+- visit the dedicated [documentation page](/data_catalog/data_catalog_job_runner.mdx) for configuring the Data Catalog Job Runner to populate your Data Catalog and keep up to date with your data sources;
 - visit the dedicated [documentation page](/data_catalog/data_catalog_open_lineage.mdx) to discover the Open Lineage pattern adopted in our Data Catalog solution;
 - visit the dedicated [documentation page](/data_catalog/database_setup.mdx) to know how to properly prepare the database wherein all Data Catalog assets and information is stored;
 - visit the [guide about secure access](/data_catalog/secure_access.mdx) to know how to manage Data Catalog user permissions through authorization mechanisms;
