--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -110,7 +110,7 @@ The latest services versions are reported [here](/data_catalog/compatibility_mat
 
 As reported in the [Migration Guides](/data_catalog/data_catalog_open_lineage.mdx#migration-guides) paragraph of [Data Catalog Open Lineage](/data_catalog/data_catalog_open_lineage.mdx) service, when upgrading from `v0.1.0` to `v0.1.1`, it is necessary to configure the Fabric Sync cronjob, which is responsible to keep synchronized the information displayed on Data Catalog application with the collection of datasets imported by Data Catalog Agent.
 
-For more information about how to configure and trigger the Fabric Sync, please follow the [related documentation](/data_catalog/data_catalog_agent_setup.mdx#sync-assets).
+For more information about how to configure and trigger the Fabric Sync, please follow the [related documentation](/data_catalog/data_catalog_job_runner.mdx).
 
 ## Microfrontend Composer
 
