--- a/docs/data_catalog/data_catalog_open_lineage.mdx
+++ b/docs/data_catalog/data_catalog_open_lineage.mdx
@@ -10,7 +10,7 @@ import SchemaViewer from "../../src/components/SchemaViewer"
 
 ## Features
 
-Open Lineage service provides Catalog feautres and Data Lineage features to the Data Catalog UI.
+Open Lineage service provides Catalog features and Data Lineage features to the Data Catalog UI.
 
 :::note
 In the following documentation, when we reference OpenLineage, we mainly intend the service we provide as a component of Data Catalog application.
@@ -260,7 +260,7 @@ The following routes are exposed over the `/open-lineage/*` base path.
 | `/datasets/items/:id`                                      | REST | GET    | Retrieve the lineage details of a dataset.                                                                |
 | `/datasets/items/:id`                                      | REST | PATCH  | Update the details of a `virtual` dataset.                                                                |
 | `/datasets/items/:id`                                      | REST | DELETE | Delete the details of a `virtual` dataset.                                                                |
-| `/dataset/items`                                           | REST | POST   | Create a virtal dataset.                                                                                  |
+| `/dataset/items`                                           | REST | POST   | Create a virtual dataset.                                                                                  |
 | `/facets/storage/items/:id`                                | REST | GET    | Return the [OpenLineage](https://openlineage.io/) specification of a `virtual` system of record.          |
 | `/facets/storage/items/:id`                                | REST | DELETE | Delete a `virtual` system of record                                                                       |
 
