--- a/docs/data_catalog/frontend/data_lineage.mdx
+++ b/docs/data_catalog/frontend/data_lineage.mdx
@@ -158,7 +158,7 @@ INSERT IMAGE
 -->
 
 Users can filter the list to focus on jobs involving specific ingoing or outgoing tables, making it easier to pinpoint relevant transformations or dependencies.  
-In case there are tables beloging to the same SoR that are related each others, the information about the number of existing jobs intra-SoR is easily reported on the specific SoR entity inside the lineage canvas. 
+In case there are tables belonging to the same SoR that are related each others, the information about the number of existing jobs intra-SoR is easily reported on the specific SoR entity inside the lineage canvas. 
 
 <!---
 INSERT IMAGE
